--- a/src/pages/status/status.css
+++ b/src/pages/status/status.css
@@ -45,3 +45,10 @@
     width: 100%;
     height: 100%;
 }
+
+
+@media screen and (max-width: 500px) {
+    .main-status{
+     width: 100%;
+    }
+ }
