--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -6,6 +6,9 @@
     border: 1.5px solid rgb(214, 212, 212);
 }
 
+.cam-text{
+    color: gray;
+}
 .card-head{
     display: flex;
     justify-content: space-between;
@@ -46,6 +49,7 @@
     display: flex;
     align-items: center;
     column-gap: 5px;
+    font-size: 12px;
 }
 .dots{
     display: flex;
@@ -56,7 +60,9 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
+    font-size: 12px !important;
     background-color: grey;
+    opacity: 0.7;
 }
 
 .title{
@@ -86,6 +92,10 @@
     height: 100%;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.card-title{
+    font-size: 15px;
 }
 
 @media screen and (max-width: 500px) {
